--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "devDependencies": {
     "bower": "^1.4.1",
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13"
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-lesslint": "^1.1.14",
+    "grunt-contrib-watch": "^0.6.1",
+    "load-grunt-tasks": "^3.2.0"
   }
 }
