--- a/.editorconfig
+++ b/.editorconfig
@@ -16,8 +16,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.html]
+indent_size = 4
+indent_style = tab
+
 [*.md]
 trim_trailing_whitespace = false
-
-[*.html, *.php]
-indent_size = 4
